<resources>
    <string name="app_name">MultiPurposeBooking</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="registration">Registration</string>
    <string name="fullname">Full Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="contactno">Contact No</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="home">Home</string>
    <string name="acc">Account</string>
    <string name="event">Event</string>
    <string name="booking">Online Booking</string>
    <string name="report">Report</string>
    <string name="timetable">TimeTable</string>

    <string-array name="list_city">
        <item>Cat Museum</item>
        <item>Sarawak Cultural Village</item>
        <item>Sarawak State Museum</item>
        <item>Sarawak Cultural Village</item>
        <item>Mount Santubong</item>
    </string-array>

    <string-array name="list_state">
        <item>Cat Museum</item>
        <item>Sarawak Cultural Village</item>
        <item>Sarawak State Museum</item>
        <item>Sarawak Cultural Village</item>
        <item>Mount Santubong</item>
    </string-array>

    <string-array name="list_country">
        <item>Cat Museum</item>
        <item>Sarawak Cultural Village</item>
        <item>Sarawak State Museum</item>
        <item>Sarawak Cultural Village</item>
        <item>Mount Santubong</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
