<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_action_email"
        android:title="@string/home" />

    <item
        android:id="@+id/event"
        android:icon="@drawable/ic_action_email"
        android:title="@string/event" />

    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_action_email"
        android:title="@string/acc" />

    <item
        android:id="@+id/booking"
        android:icon="@drawable/ic_action_email"
        android:title="@string/booking" />

    <item
        android:id="@+id/report"
        android:icon="@drawable/ic_action_email"
        android:title="@string/report" />

    <item
        android:id="@+id/timetable"
        android:icon="@drawable/ic_action_email"
        android:title="@string/timetable" />

</menu>