<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hph1995.multipurposebooking.Registration">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/txtFullName"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_action_name"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rdgbGender"
            android:layout_width="269dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFullName">

            <RadioButton
                android:id="@+id/rdbMale"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rdbFemale"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:text="@string/female" />

        </RadioGroup>

        <EditText
            android:id="@+id/txtUserName"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_action_user"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rdgbGender" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_action_pass"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUserName" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_action_email"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

        <EditText
            android:id="@+id/txtContactNo"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_action_contact"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/contactno"
            android:inputType="phone"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

        <EditText
            android:id="@+id/txtCity"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_action_city"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPassword"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtContactNo" />

        <EditText
            android:id="@+id/txtState"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_action_state"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/state"
            android:inputType="textPassword"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCity" />

        <EditText
            android:id="@+id/txtCountry"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_action_country"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/country"
            android:inputType="textPassword"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtState" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_register"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCountry" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>
